Fix showing filters modal on mobile
Moved the search_facets block to where it's expected so that it renders the "show filters" button.
Updated the list to hide and modal to show at a larger break point so that there wasn't an in between state of having the filters column underneath results.
Tweaked style of modal to work with our new nav etc - not super pretty but usable at least.
Completely hiding the map filter if you're on a smaller screen. Alternatively we could just leave it at the bottom of the page (by removing the `display: none;`), because it scales down and looks/works alright, just isn't with the other filters in the modal.

--- a/ckanext/dia_theme/less/dia_custom.less
+++ b/ckanext/dia_theme/less/dia_custom.less
@@ -1239,11 +1239,14 @@ body li {
 .dataset-map-expanded #dataset-map {
   top: -636px;
 }
-@media (max-width: 991px) {
+@media (max-width: 990px) {
   .col-md-9.primary {
     float: unset;
   }
-  .dataset-map-expanded #dataset-map {
+  #dataset-map {
+    display: none;
+  }
+  .dataset-map-expanded {
     width: 100%;
     top: -405px;
   }
